--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,58 +9,221 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/cdf62a7c5d.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- header -->
     <header>
-        <div class="header1">
-        <div class="logo">
-            <h2>Start Bootstrap</h2>
-        </div>
-        <nav class="menu">
-            <ul>
-                <li>Services</li>
-                <li>Portfolio</li>
-                <li>About</li>
-                <li>Team</li>
-                <li>Contact</li>
-            </ul>
-        </nav>
-    </div>
-        <div class="clear"></div>
-        <section class="welcome">
-            <div class="text1">
-                <h2>Welcome To Our Studio!</h2>
-                <h1>IT'S NICE TO MEET YOU</h1>
-                <input class="btn1" type="button" value="TELL ME MORE">
+        <div class="orta">
+            <div class="header1">
+                <div class="logo">
+                    <h2>Start Bootstrap</h2>
+                </div>
+                <nav class="menu">
+                    <ul>
+                        <li>Services</li>
+                        <li>Portfolio</li>
+                        <li>About</li>
+                        <li>Team</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
             </div>
-        </section>
+            <div class="clear"></div>
+        </div>
     </header>
+    <section class="welcome">
+        <div class="text1">
+            <h2>Welcome To Our Studio!</h2>
+            <h1>IT'S NICE TO MEET YOU</h1>
+            <input class="btn1" type="button" value="TELL ME MORE">
+        </div>
+    </section>
     <!-- header end -->
     <section class="services">
-<div class="service">
-    <h1>SERVICES</h1>
-    <p>Lorem ipsum dolor sit amet consectetur.</p>
-</div>
-<div class="icon">
-    <i class="fas fa-shopping-cart fa-4x"></i>
-    <h2>E-Commerce</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-</div>
-<div class="icons">
-<div class="icon">
-    <i class="fas fa-laptop fa-4x"></i>
-    <h2>Responsive Design</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-</div>
-<div class="icon">
-    <i class="fas fa-lock fa-4x"></i>
-    <h2>Web Security</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-</div>
-</div>
-
+        <div class="orta">
+            <div class="service">
+                <h1>SERVICES</h1>
+                <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+            </div>
+            <div class="icon">
+                <i class="fas fa-shopping-cart fa-4x"></i>
+                <h2>E-Commerce</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
+                    harum ex magni, dicta impedit.</p>
+            </div>
+            <div class="icon">
+                <i class="fas fa-laptop fa-4x"></i>
+                <h2>Responsive Design</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
+                    harum ex magni, dicta impedit.</p>
+            </div>
+            <div class="icon">
+                <i class="fas fa-lock fa-4x"></i>
+                <h2>Web Security</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore
+                    harum ex magni, dicta impedit.</p>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </section>
+    <section class="portfolio">
+        <h1>PORTFOLIO</h1>
+        <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+        <div class="orta">
+            <div class="image">
+                <img src="img1.jpg" alt="">
+                <div class="service-content">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+            <h2>Threads</h2>
+                <h4>Illustration</h4>
+            </div>
+            <div class="image">
+                <img src="img2.jpg" alt="">
+                <div class="service-content">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+            <h2>Explore</h2>
+                <h4>Graphic Design</h4>
+            </div>
+            <div class="image">
+                <img src="img3.jpg" alt="">
+                <div class="service-content">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+            <h2>Finish</h2>
+                <h4>Identity</h4>
+            </div>
+            <div class="image">
+                <img src="img4.jpg" alt="">
+                <div class="service-content">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+            <h2>Lines</h2>
+                <h4>Branding</h4>
+            </div>
+            <div class="image">
+                <img src="img5.jpg" alt="">
+               <div class="service-content">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+            <h2>Southwest</h2>
+                <h4>Website Design</h4>
+            </div>
+            <div class="image">
+                <img src="img6.jpg" alt="">
+              <div class="service-content">
+                <i class="fas fa-plus fa-3x"></i>
+            </div>
+            <h2>Window</h2>
+            <h4>Photography</h4>
+            </div>
+        </div>
+        <div class="clear"></div>
     </section>
 
+    <section class="teams">
+        <div class="amazing">
+            <h2>OUR AMAZING TEAM</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+        </div>
+        <div class="orta">
+            <div class="team">
+                <img src="team1..jpg" alt="">
+                <h4>Kay Garland</h4>
+                <p>Lead Designer</p>
+                <ul class="list">
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-linkedin-in"></i></li>
+                </ul>
+            </div>
+            <div class="team">
+                <img src="team2.jpg" alt="">
+                <h4>Larry Parker</h4>
+                <p>Lead Designer</p>
+                <ul class="list">
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-linkedin-in"></i></li>
+                </ul>
+            </div>
+            <div class="team">
+                <img src="team3.jpg" alt="">
+                <h4>Diana Pertersen</h4>
+                <p>Lead Designer</p>
+                <ul class="list">
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-linkedin-in"></i></li>
+                </ul>
+            </div>
+            <div class="end">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non
+                    quis
+                    ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            </div>
+        </div>
+    </section>
 
+    <section class="firma">
+        <div class="logos">
+            <img src="logo1.jpg" alt="">
+        </div>
+        <div class="logos">
+            <img src="logo2.jpg" alt="">
+        </div>
+        <div class="logos">
+            <img src="logo3.jpg" alt="">
+        </div>
+        <div class="logos">
+            <img src="logo4.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="map">
+        <div class="information">
+            <h1>CONTACT US</h1>
+            <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+        </div>
+        <div class="mess">
+            <div class="left">
+                <ul>
+                    <li><input class="btn1" type="text" placeholder="Your name*"></li>
+                    <li><input class="btn1" type="email" placeholder="Your Email*"></li>
+                    <li> <input class="btn1" type="text" placeholder="Your Phone*"></li>
+                </ul>
+            </div>
+            <div class="right">
+                <textarea name="" id="" placeholder="Your Message*" cols="60" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="button">
+            <button>SEND MESSAGE</button>
+        </div>
+    </section>
+    <section class="links">
+        <div class="orta">
+            <div class="copyright">
+                <p class="copy">Copyright © Your Website 2019</p>
+            </div>
+            <div class="clear"></div>
+            <div class="icon3">
+                <ul class="list">
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-linkedin-in"></i></li>
+                </ul>
+            </div>
+            <div class="privacy">
+                <ul class="terms">
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Use</a> </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
